--- a/src/template/index.html
+++ b/src/template/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./js/index.js" type="module"></script>
+    <script src="../js/index.js" type="module"></script>
   </body>
 </html>
