fix: fix image src

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -71,7 +71,7 @@
             </svg>
             <img
               class="pic"
-              src="https://scontent.fmnl40-1.fna.fbcdn.net/v/t39.30808-6/463414950_1080386837427273_980418283995297635_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeFaUDb40IQMpwWcu8MqaH0drN5BpbxpDLWs3kGlvGkMtVHBqsdNnt6PUjaoS6U44UU6gO3A4FlQffRlwoCEKI7h&_nc_ohc=u5MGFXFMuEkQ7kNvgF1T91S&_nc_zt=23&_nc_ht=scontent.fmnl40-1.fna&_nc_gid=AXmBv8Lwn0vhYsizwbgOSjW&oh=00_AYD1YkgYyWiq4uNhbNjG0q2z99e0bkW0pSgpq_t-pA-bCg&oe=674F3ED0"
+              src="https://scontent.fmnl8-6.fna.fbcdn.net/v/t39.30808-6/486278539_1208271921305430_6381947040850528312_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeFwYM49BC17vsnA6TUww09BwyWfckFA53LDJZ9yQUDncreL8zxKkDvwnEDewsCqaAEq-L020x9oaMQuB6ljQsOt&_nc_ohc=J7yLb7MNjgMQ7kNvwF40QlK&_nc_oc=AdmTdVpLyBRj2iP7tZdSDJlMJ9A_BYbFd0Dr8Hrz0wxnaUavPh1MoRDlQ2o7oAkVCrj-TD6oK_0Y_UG-k326pjPN&_nc_zt=23&_nc_ht=scontent.fmnl8-6.fna&_nc_gid=J38FZyOXt3__OLvvSrztvQ&oh=00_AfFSQhs6hFC0pejAlEe7qTV9HzPnTJbqDvbnkBTv9cRfOQ&oe=68127E76"
               alt="profile"
             />
 
@@ -80,7 +80,7 @@
           <div class="profile">
             <img
               class="pic"
-              src="https://scontent.fmnl40-1.fna.fbcdn.net/v/t39.30808-6/463414950_1080386837427273_980418283995297635_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeFaUDb40IQMpwWcu8MqaH0drN5BpbxpDLWs3kGlvGkMtVHBqsdNnt6PUjaoS6U44UU6gO3A4FlQffRlwoCEKI7h&_nc_ohc=u5MGFXFMuEkQ7kNvgF1T91S&_nc_zt=23&_nc_ht=scontent.fmnl40-1.fna&_nc_gid=AXmBv8Lwn0vhYsizwbgOSjW&oh=00_AYD1YkgYyWiq4uNhbNjG0q2z99e0bkW0pSgpq_t-pA-bCg&oe=674F3ED0"
+              src="https://scontent.fmnl8-6.fna.fbcdn.net/v/t39.30808-6/486278539_1208271921305430_6381947040850528312_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeFwYM49BC17vsnA6TUww09BwyWfckFA53LDJZ9yQUDncreL8zxKkDvwnEDewsCqaAEq-L020x9oaMQuB6ljQsOt&_nc_ohc=J7yLb7MNjgMQ7kNvwF40QlK&_nc_oc=AdmTdVpLyBRj2iP7tZdSDJlMJ9A_BYbFd0Dr8Hrz0wxnaUavPh1MoRDlQ2o7oAkVCrj-TD6oK_0Y_UG-k326pjPN&_nc_zt=23&_nc_ht=scontent.fmnl8-6.fna&_nc_gid=J38FZyOXt3__OLvvSrztvQ&oh=00_AfFSQhs6hFC0pejAlEe7qTV9HzPnTJbqDvbnkBTv9cRfOQ&oe=68127E76"
               alt="profile"
             />
             <div class="text-container">
