--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,8 +1,8 @@
 @import url("./reset.css");
 :root {
-  --cyan: #6fffe9;
-  --dark-blue: #0b132b;
-  --navy-blue: #1c2541;
+  --cyan: #fff;
+  --dark-blue: #2c3136;
+  --navy-blue: #1c1f22;
   --white: #ffffff;
   --sidebar-bg: var(--dark-blue);
   --sidebar-clr: var(--cyan);
@@ -35,7 +35,7 @@ body {
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 4fr;
+  grid-template-columns: 1fr 25fr;
   min-height: 100vh;
 }
 
@@ -89,9 +89,48 @@ svg:hover {
   height: auto;
 }
 
+.dashboard {
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.dashboard img {
+  width: 12rem;
+}
+
+.burger {
+  display: block;
+  margin-right: 5rem;
+}
+
+.burger div {
+  width: 25px;
+  height: 3px;
+  background-color: #fff;
+  margin: 5px;
+  transition: all 0.3s ease;
+}
+/* .line-1 {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.line-2 {
+  opacity: 0;
+}
+
+.line-3 {
+  transform: rotate(45deg) translate(-5px, -6px);
+} */
+
 .sidebar ul svg {
   width: 1.5rem;
+  min-width: 1.5rem;
   height: auto;
+}
+
+.sidebar ul h3 {
+  display: none;
 }
 
 .sub-container {
@@ -117,7 +156,7 @@ header {
   grid-template-columns: min-content 1fr;
   align-items: center;
   gap: 1rem;
-  padding-left: 3rem;
+  padding-left: 2rem;
 }
 
 .search input {
@@ -138,13 +177,14 @@ header {
   grid-auto-flow: column;
   place-items: center;
   gap: 3rem;
-  padding-right: 3rem;
+  padding-right: 2rem;
   justify-content: end;
 }
 
 .mini-profile .pic {
   width: 2.5rem;
   border-radius: 20px;
+  min-width: 2.5rem;
 }
 
 .profile {
@@ -153,7 +193,7 @@ header {
   justify-content: start;
   align-items: center;
   gap: 1rem;
-  padding-left: 3rem;
+  padding-left: 2rem;
 }
 
 .profile img {
@@ -174,7 +214,9 @@ header {
   grid-auto-flow: column;
   grid-auto-columns: clamp(70px, 5vw, 100px);
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: flex-end;
+  padding: 2rem;
+  gap: 2rem;
 }
 
 .upload button {
