--- a/src/template/index.html
+++ b/src/template/index.html
@@ -11,13 +11,7 @@
     <div class="container">
       <nav class="sidebar">
         <div class="dashboard">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-            <title>view-dashboard</title>
-            <path
-              d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z"
-            />
-          </svg>
-          <h1>Proctorship Management</h1>
+          <img src="../../assets/image/plmun-logo.png" alt="" srcset="" />
         </div>
         <ul>
           <li>
@@ -52,15 +46,13 @@
       <div class="sub-container">
         <header>
           <div class="search">
-            <label for="search">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                <title>magnify</title>
-                <path
-                  d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
-                />
-              </svg>
-            </label>
-            <input type="search" id="search" name="search" title="search" />
+            <div for="search">
+              <div class="burger">
+                <div class="line-1"></div>
+                <div class="line-2"></div>
+                <div class="line-3"></div>
+              </div>
+            </div>
           </div>
           <div class="mini-profile">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -88,13 +80,12 @@
                 <h4>Hi there,</h4>
               </div>
               <div class="username">
-                <h2>Danilo Casim Jr. (@mizaccc)</h2>
+                <h2>Danilo Casim Jr.</h2>
               </div>
             </div>
           </div>
           <div class="upload">
-            <button type="button">New</button>
-            <button type="button">Upload</button>
+            <button type="button">Update</button>
             <button type="button">Share</button>
           </div>
         </header>
