--- a/src/template/signup.html
+++ b/src/template/signup.html
@@ -8,6 +8,9 @@
   </head>
 
   <body>
+    <div class="nav">
+      <img src="../../assets/image/plmun-logo-1.png" alt="logo" />
+    </div>
     <div class="container">
       <div class="logo-container">
         <div class="logo-wrapper">
