--- a/src/css/signup.css
+++ b/src/css/signup.css
@@ -19,72 +19,15 @@
   font-style: oblique;
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-* {
-  margin: 0;
-}
-
-body {
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
-}
-
-img,
-picture,
-video,
-canvas,
-svg {
-  display: block;
-  max-width: 100%;
-}
-
-input,
-button,
-textarea,
-select {
-  font: inherit;
-}
-
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  overflow-wrap: break-word;
-}
-
-p {
-  text-wrap: pretty;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  text-wrap: balance;
-}
-
-#root,
-#__next {
-  isolation: isolate;
-}
-
-/* END OF CSS RESET */
-
 .container {
   min-height: 100vh;
   display: flex;
 }
 
+.nav {
+  display: none;
+  background-color: var(--clr-bg-btn);
+}
 .logo-container,
 .logo-wrapper,
 .caption,
@@ -152,7 +95,7 @@ h6 {
 }
 
 h2 {
-  font-size: clamp(1.2rem, 1.5vw, 1.5rem);
+  font-size: clamp(1rem, 1.5vw, 1.5rem);
 }
 
 .signup {
@@ -245,4 +188,33 @@ a {
 
 a:hover {
   border-bottom: 2px solid var(--clr-bg-btn);
+}
+
+@media (max-width: 950px) {
+  .logo-container {
+    display: none;
+  }
+
+  .nav {
+    display: block;
+    height: 4.5rem;
+    padding: 1rem;
+  }
+
+  .nav img {
+    width: 9rem;
+  }
+  body {
+    text-align: center;
+  }
+
+  form {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .btn-container {
+    justify-content: center;
+    align-items: center;
+  }
 }
